UserGuide to iquaflow

--- a/docs/source/UserGuide.ipynb
+++ b/docs/source/UserGuide.ipynb
@@ -20,7 +20,7 @@
     " 1. Define the original dataset with DatasetWrapper.\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.datasets import DSWrapper\n",
+    "from iquaflow.datasets import DSWrapper\n",
     "\n",
     "ds_wrapper = DSWrapper(data_path=data_path)\n",
     "```\n",
@@ -29,7 +29,7 @@
     "Modifiers with quality from 10 to 90.\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.datasets import DSModifier_jpg\n",
+    "from iquaflow.datasets import DSModifier_jpg\n",
     "\n",
     "ds_modifiers_list = [DSModifier_jpg(params={'quality': i}) for i in [10,30,50,70,90] ]\n",
     "```\n",
@@ -38,7 +38,7 @@
     "\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.experiments import ExperimentSetup\n",
+    "from iquaflow.experiments import ExperimentSetup\n",
     "\n",
     "experiment = ExperimentSetup(\n",
     "   experiment_name=\"MyFirstExperiment\",\n",
@@ -59,7 +59,7 @@
     " 4. The information from the executed experiment can be collected in a json. Also a dataframe suitable for visualization tools (see next step) can be extracted from\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.experiments import ExperimentInfo\n",
+    "from iquaflow.experiments import ExperimentInfo\n",
     "\n",
     "experiment_info = ExperimentInfo(experiment_name)\n",
     "\n",
@@ -78,7 +78,7 @@
     "\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.experiments import ExperimentVisual\n",
+    "from iquaflow.experiments import ExperimentVisual\n",
     "\n",
     "ev = ExperimentVisual(\n",
     "   df,\n",
@@ -218,7 +218,7 @@
     "A usage example:\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.sanity import SanityCheck\n",
+    "from iquaflow.sanity import SanityCheck\n",
     "\n",
     "sc = SanityCheck(data_path, output_folder)\n",
     "sc.check_annotations()\n",
@@ -247,7 +247,7 @@
     "A usage example:\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.ds_stats import DsStats\n",
+    "from iquaflow.ds_stats import DsStats\n",
     "\n",
     "dss = DsStats(data_path, output_folder)\n",
     "stats = dss.perform_stats(show_plots = True)\n",
@@ -271,7 +271,7 @@
     "Usage example:\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.ds_stats import DsStats\n",
+    "from iquaflow.ds_stats import DsStats\n",
     "\n",
     "DsStats.notebook_annots_summary(\n",
     "    df,\n",
@@ -282,7 +282,7 @@
     "```\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.ds_stats import DsStats\n",
+    "from iquaflow.ds_stats import DsStats\n",
     "\n",
     "DsStats.notebook_imgs_preview(\n",
     "        data_path=data_path,\n",
@@ -307,7 +307,7 @@
     "Having the dataset conformed as mentioned before it is simply as providing the location path to the **DSWrapper**\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.datasets import DSWrapper\n",
+    "from iquaflow.datasets import DSWrapper\n",
     "ds_wrapper = DSWrapper(data_path=\"[path_to_the_dataset]\")\n",
     "```\n",
     "Internally iquaflow parses the structure helping the experiment tools to understand how the dateset is conformed.\n",
@@ -343,7 +343,7 @@
     "\n",
     "Just import the desired modifier and run it\n",
     "```python\n",
-    "from iq_tool_box.datasets import DSModifier_jpg\n",
+    "from iquaflow.datasets import DSModifier_jpg\n",
     "\n",
     "img_path = \"test_datasets/ds_coco_dataset/images\")\n",
     "jpg85 = DSModifier_jpg(params={\"quality\": 85})\n",
@@ -409,7 +409,7 @@
     "\n",
     "```python\n",
     "from sagemaker.pytorch import PyTorch\n",
-    "from iq_tool_box.experiments.task_execution import SageMakerEstimatorFactory, SageMakerTaskExecution\n",
+    "from iquaflow.experiments.task_execution import SageMakerEstimatorFactory, SageMakerTaskExecution\n",
     "\n",
     "sage_estimator_factory = SageMakerEstimatorFactory(\n",
     "   PyTorch,\n",
@@ -544,7 +544,7 @@
     "This objects allows the user to manage the experiment information. It simplifies the access to MLFlow and allows to apply new metrics to previous executed experiments. Basic usage example:\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.experiments import ExperimentInfo\n",
+    "from iquaflow.experiments import ExperimentInfo\n",
     "\n",
     "experiment_info = ExperimentInfo(experiment_name)\n",
     "runs = experiment_info.get_mlflow_run_info() # runs is a python dict\n",
@@ -577,7 +577,7 @@
     "* Homogeneous areas (HA) - usually more accurate. \n",
     "\n",
     "```python\n",
-    "from iq_tool_box.metrics import (\n",
+    "from iquaflow.metrics import (\n",
     "       SNRMetric,\n",
     "       snr_function_from_array,\n",
     "       snr_function_from_fn\n",
@@ -618,7 +618,7 @@
     " - Custom metrics can be created by inheriting the class *Metrics*:\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.metrics import Metric\n",
+    "from iquaflow.metrics import Metric\n",
     "\n",
     "class CustomMetric(Metric):\n",
     "    def __init__(self) -> None:\n",
@@ -632,7 +632,7 @@
     " - To calculate a metric to an executed experiment do:\n",
     "\n",
     "```python\n",
-    "from iq_tool_box.experiments import ExperimentInfo\n",
+    "from iquaflow.experiments import ExperimentInfo\n",
     "\n",
     "experiment_info = ExperimentInfo(experiment_name)\n",
     "my_custom_metric = CustomMetric()\n",
@@ -683,13 +683,13 @@
     "\n",
     "### Environment installation\n",
     "\n",
-    "This repository does not require any specific python environment. In our case we use Python 3.7. Hence, we do recommend create a new environment with Python 3.7 and pip. The file ​*setup.py​* allows to install ​*iq_tool_box​* as a python package via pip. Once you have created your new environment, you only need to clone locally the repository:\n",
+    "This repository does not require any specific python environment. In our case we use Python 3.7. Hence, we do recommend create a new environment with Python 3.7 and pip. The file ​*setup.py​* allows to install ​*iquaflow​* as a python package via pip. Once you have created your new environment, you only need to clone locally the repository:\n",
     "\n",
     "```bash\n",
     "git clone https://github.com/satellogic/iquaflow\n",
     "\n",
     "```\n",
-    "and then do the wallowing command to install the *iq_tool_box* as a softlink in\n",
+    "and then do the wallowing command to install the *iquaflow* as a softlink in\n",
     "the environment:\n",
     "```bash\n",
     "python -m pip install -e .\n",
